--- a/src/app/main/proposal/proposal-form/proposal-form.component.html
+++ b/src/app/main/proposal/proposal-form/proposal-form.component.html
@@ -7,10 +7,9 @@
 <div fxFlexlayout="column">
   <form [formGroup]="selectForm">
 
-
     <div fxLayout="row">
-      <div fxFlex="100" fxFlex.gt-sm="50" fxLayoutAlign="center">
-        <mat-form-field fxFlex="50">
+      <div fxFlex="100" fxFlex.gt-sm="50" class="pl-20  pr-16" fxLayoutAlign="center">
+        <mat-form-field appearance="outline" fxFlex>
           <mat-label>หน่วยงาน</mat-label>
           <mat-select formControlName="department" name="department">
             <mat-option>--</mat-option>
@@ -20,8 +19,8 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div fxFlex="100" fxFlex.gt-sm="50" fxLayoutAlign="center">
-        <mat-form-field fxFlex="50">
+      <div fxFlex="100" fxFlex.gt-sm="50" class="pl-20  pr-16" fxLayoutAlign="center">
+        <mat-form-field appearance="outline" fxFlex>
           <mat-label>กลุ่ม/ฝ่าย</mat-label>
           <mat-select formControlName="group" name="group">
             <mat-option>--</mat-option>
@@ -33,8 +32,8 @@
       </div>
     </div>
 
-    <div fxLayout="row" fxLayoutAlign="center">
-      <mat-form-field fxFlex="75">
+    <div fxLayout="row" class="pl-20  pr-16" fxLayoutAlign="center">
+      <mat-form-field appearance="outline" fxFlex>
         <mat-label>แผนงาน</mat-label>
         <mat-select formControlName="plan" name="plan">
           <mat-option>--</mat-option>
@@ -45,8 +44,8 @@
       </mat-form-field>
     </div>
 
-    <div fxLayout="row" fxLayoutAlign="center">
-      <mat-form-field fxFlex="75">
+    <div fxLayout="row" class="pl-20  pr-16" fxLayoutAlign="center">
+      <mat-form-field appearance="outline" fxFlex>
         <mat-label>ผลผลิต/โครงการ</mat-label>
         <mat-select formControlName="product" name="product">
           <mat-option>--</mat-option>
@@ -57,8 +56,8 @@
       </mat-form-field>
     </div>
 
-    <div fxLayout="row" fxLayoutAlign="center">
-      <mat-form-field fxFlex="75">
+    <div fxLayout="row" class="pl-20  pr-16" fxLayoutAlign="center">
+      <mat-form-field appearance="outline" fxFlex>
         <mat-label>กิจกรรม</mat-label>
         <mat-select formControlName="activities" name="activities">
           <mat-option>--</mat-option>
@@ -69,8 +68,8 @@
       </mat-form-field>
     </div>
 
-    <div fxLayout="row" fxLayoutAlign="center">
-      <mat-form-field fxFlex="75">
+    <div fxLayout="row" class="pl-20  pr-16" fxLayoutAlign="center">
+      <mat-form-field appearance="outline" fxFlex>
         <mat-label>ประเภทรายจ่าย</mat-label>
         <mat-select formControlName="expense" name="expense">
           <mat-option>--</mat-option>
@@ -81,8 +80,8 @@
       </mat-form-field>
     </div>
 
-    <div fxLayout="row" fxLayoutAlign="center">
-      <mat-form-field class="example-full-width" fxFlex="75">
+    <div fxLayout="row" class="pl-20  pr-16" fxLayoutAlign="center">
+      <mat-form-field class="example-full-width" appearance="outline" fxFlex>
         <mat-label>รายการ</mat-label>
         <textarea matInput formControlName="list" name="list" placeholder="Ex. It makes me feel..."></textarea>
       </mat-form-field>
